Containerize application with database